[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Virtual Address"
bundle = "com.jebiel.org"
version = "0.0.1"
url = "https://org.jebiel.com/virtualaddress"
license = "GNU General Public License v3 or later (GPLv3+)"
author = 'Jess Rasmussen'
author_email = "jess@org.jebiel.com"

[tool.briefcase.app.virtualaddress]
formal_name = "Virtual Address"
description = "Calculate properties of Virtual address"
icon = "src/virtualaddress/resources/virtualaddress"
sources = ['src/virtualaddress']
requires = []


[tool.briefcase.app.virtualaddress.macOS]
requires = [
    'toga-cocoa>=0.3.0.dev18',
]

[tool.briefcase.app.virtualaddress.linux]
requires = [
    'toga-gtk>=0.3.0.dev18',
]

[tool.briefcase.app.virtualaddress.windows]
requires = [
    'toga-winforms>=0.3.0.dev18',
]

# Mobile deployments
[tool.briefcase.app.virtualaddress.iOS]
requires = [
    'toga-iOS>=0.3.0.dev18',
]

[tool.briefcase.app.virtualaddress.android]
requires = [
    'toga-android>=0.3.0.dev18',
]
